home.css
:root {
  font-size: 18px;
  font-family: 'Plus Jakarta Sans';
  --blue1: rgb(153, 193, 241);
  --blue2: rgb(98, 160, 234);
  --blue3: rgb(53, 132, 228);
  --blue4: rgb(28, 113, 216);
  --blue5: rgb(26, 95, 180);
  --green1: rgb(143, 240, 164);
  --green2: rgb(87, 227, 137);
  --green3: rgb(51, 209, 122);
  --green4: rgb(46, 194, 126);
  --green5: rgb(38, 162, 105);
  --yellow1: rgb(249, 240, 107);
  --yellow2: rgb(248, 228, 92);
  --yellow3: rgb(246, 211, 45);
  --yellow4: rgb(245, 194, 17);
  --yellow5: rgb(229, 165, 10);
  --orange1: rgb(255, 190, 111);
  --orange2: rgb(255, 163, 72);
  --orange3: rgb(255, 120, 0);
  --orange4: rgb(230, 97, 0);
  --orange5: rgb(198, 70, 0);
  --red1: rgb(246, 97, 81);
  --red2: rgb(237, 51, 59);
  --red3: rgb(224, 27, 36);
  --red4: rgb(192, 28, 40);
  --red5: rgb(165, 29, 45);
  --purple1: rgb(220, 138, 221);
  --purple2: rgb(192, 97, 203);
  --purple3: rgb(145, 65, 172);
  --purple4: rgb(129, 61, 156);
  --purple5: rgb(97, 53, 131);
  --brown1: rgb(205, 171, 143);
  --brown2: rgb(181, 131, 90);
  --brown3: rgb(152, 106, 68);
  --brown4: rgb(134, 94, 60);
  --brown5: rgb(99, 69, 44);
  --light1: rgb(255, 255, 255);
  --light2: rgb(246, 245, 244);
  --light3: rgb(222, 221, 218);
  --light4: rgb(192, 191, 188);
  --light5: rgb(154, 153, 150);
  --dark1: rgb(119, 118, 123);
  --dark2: rgb(94, 92, 100);
  --dark3: rgb(61, 56, 70);
  --dark4: rgb(36, 31, 49);
  --dark5: rgb(0, 0, 0);
  --text: #f6f5f4;
}

html,
body {
  background-color: var(--light2);
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

.container {
  width: 1200px;
  max-width: 90%;
  margin: 0 auto;
}

header {
  /* height: 50vh; */
  color: #f5f5f5;
  background-color: var(--green5);
}

.topheader {
  display: flex;
  justify-content: space-between;
  padding: 1rem;
}

.logo img {
  border-radius: 50%;
  height: 4rem;
  width: 4rem;
  padding: 0 .5rem;
  object-fit: cover
}

.banner {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.bannertext {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.banner h1 {
  font-size: 4.1em;
  margin: 3rem;
}

.bannerimg {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.bannerimg img {
  width: 80%;
  height: auto;
  border-radius: 50%;
  margin: 3rem;
}

section {
  text-align: center;
  color: var(--text);
}

section h1 {
  font-size: 3em;
  margin: 2rem auto;
}

section h2 {
  font-size: 2em;
}

section p {
  margin: 1rem auto 2rem;
}

#why {
  font-size: 1.1rem;

}

.div-intro {
  background-color: var(--dark3);
}

.intro {
  padding: 1em 0;
}

hr {
  width: 80%;
  height: 1px;
  margin: 1em auto;
  background-color: var(--green1);
  border: none;
}

#hipo section {
  color: var(--dark4);
}

.gridwhy:nth-child(odd) {
  display: grid;
  grid-template-columns: 40% auto;
  grid-template-areas: 'gimg gtext';
  margin: 2rem 0;
}

.gridwhy:nth-child(even) {
  display: grid;
  grid-template-columns: auto 40%;
  grid-template-areas: 'gtext gimg';
  margin: 2rem 0;
}

.ratio {
  grid-area: gimg;

}

.ratio img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.text-why {
  grid-area: gtext;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: left;
  padding: 0 2rem;

}

.kimiahijau h2 {
  color: var(--green5);
}

footer {
  background-color: var(--dark5);
}

.footergrid {
  display: grid;
  grid-template-columns: auto auto;
}

address {
  color: var(--light1);
  margin: 2rem;
}

footer h4 {
  color: var(--green2);
}

footer ul {
  list-style: none;
  list-style-type: none;
  padding: 1rem 0;
  margin: 0;
}

footer ul li {
  padding: .3rem 0;
}

li:nth-child(1) {
  padding: 0;
}

li h4 {
  margin: .75rem 0;
  padding: 0;
}

footer ul li a {
  text-decoration: none;
  color: var(--text);
  transition: ease-in-out .25s;
}

footer ul li a:hover {
  color: var(--green1);
  transition: ease-in-out .25s;
}

.cp {
  text-align: center;
  font-size: .9rem;
  margin: 0;
  padding: .2rem 0;
  color: var(--dark1);
}

@media (max-width:1023px) {
  .banner {
    grid-template-columns: auto;
    grid-template-rows: auto auto;
    text-align: center;
  }

  .banner>h1 {
    margin: .5em;
  }

  .bannerimg {
    justify-content: center;
  }

  .bannerimg img {
    width: 65%;
  }
}

@media (max-width:768px) {
  .gridwhy:nth-child(n+1) {
    grid-template-columns: auto;
    grid-template-rows: auto auto;
    grid-template-areas: 'gimg''gtext';
  }
.footergrid {
  grid-template-rows: auto auto;
  grid-template-columns: auto;
}
address {
  margin-left: 0;
}
}

